[package]
name = "cbs-protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cbs_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "3.3.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
nom = "7"
pyth-sdk-solana = "0.4.2"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

stable-swap = { path = "../../../stable-swap/programs/stable-swap", features=["cpi"] }
uniswap = { path = "../../../uniswap/programs/uniswap", features=["cpi"]}
swap-router = { path = "../../../swap-router/programs/swap-router", features=["cpi"]}
lpfinance-tokens = { path = "../../../lpfinance-tokens/programs/lpfinance-tokens", features=["cpi"]}
test-tokens = { path="../../../test-tokens/programs/test-tokens", features = ["cpi"]}

solend = { path = "../../../solend/programs/solend", features=["cpi"]}
apricot = { path = "../../../apricot/programs/apricot", features=["cpi"]}