[package]
name = "lpfinance-tokens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lpfinance_tokens"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.24.0", features=["init-if-needed"] }
anchor-spl = { version = "0.24.0" }
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
