[package]
name = "swap-router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.24.0", features=["init-if-needed"] }
anchor-spl = { version = "0.24.0" }
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2"
nom = "7"
pyth-sdk-solana = "0.4.2"
stable-swap = { path="../../../stable-swap/programs/stable-swap", features = ["cpi"]}
uniswap = { path="../../../uniswap/programs/uniswap", features = ["cpi"]}
test-tokens = { path="../../../test-tokens/programs/test-tokens", features = ["cpi"]}