[package]
name = "stable-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.24.2"
stable-swap-anchor = "1.8.1"
stable-swap-client = "1.8.1"
anchor-spl = "0.24.2"
